--- a/style.css
+++ b/style.css
@@ -206,10 +206,10 @@ input[type=file]::file-selector-button:hover {
     mask-position: center;
 }
 
-.rectangle { -webkit-mask-image: url('../Assets/user_rectangle.png'); mask-image: url('../Assets/user_rectangle.png'); -webkit-mask-size: 97%; mask-size: 97%; -webkit-mask-repeat: no-repeat; mask-repeat: no-repeat; -webkit-mask-position: center; mask-position: center;}
-.square { -webkit-mask-image: url('../Assets/user_rectangle.png'); mask-image: url('../Assets/user_rectangle.png'); -webkit-mask-size: 80%; mask-size: 80%; -webkit-mask-repeat: no-repeat; mask-repeat: no-repeat; -webkit-mask-position: center; mask-position: center;}
-.circle { -webkit-mask-image: url('../Assets/user_circle.png'); mask-image: url('../Assets/user_circle.png'); -webkit-mask-size: 97%; mask-size: 97%; -webkit-mask-repeat: no-repeat; mask-repeat: no-repeat; -webkit-mask-position: center; mask-position: center;}
-.heart { -webkit-mask-image: url('../Assets/user_heart.png'); mask-image: url('../Assets/user_heart.png'); -webkit-mask-size: 85%; mask-size: 85%; -webkit-mask-repeat: no-repeat; mask-repeat: no-repeat; -webkit-mask-position: center; mask-position: center;}
+.rectangle { -webkit-mask-image: url('user_rectangle.png'); mask-image: url('user_rectangle.png'); -webkit-mask-size: 97%; mask-size: 97%; -webkit-mask-repeat: no-repeat; mask-repeat: no-repeat; -webkit-mask-position: center; mask-position: center;}
+.square { -webkit-mask-image: url('user_rectangle.png'); mask-image: url('user_rectangle.png'); -webkit-mask-size: 80%; mask-size: 80%; -webkit-mask-repeat: no-repeat; mask-repeat: no-repeat; -webkit-mask-position: center; mask-position: center;}
+.circle { -webkit-mask-image: url('user_circle.png'); mask-image: url('user_circle.png'); -webkit-mask-size: 97%; mask-size: 97%; -webkit-mask-repeat: no-repeat; mask-repeat: no-repeat; -webkit-mask-position: center; mask-position: center;}
+.heart { -webkit-mask-image: url('user_heart.png'); mask-image: url('user_heart.png'); -webkit-mask-size: 85%; mask-size: 85%; -webkit-mask-repeat: no-repeat; mask-repeat: no-repeat; -webkit-mask-position: center; mask-position: center;}
 
 #main_image{
     margin: auto;
